# gurt-nostr-chat

./: README.md  gurted.html  gurted.lua  index.html  remember  test.html
server/: Cargo.toml  cert.key.pem  cert.pem
server/src/: main.rs
