[package]
name = "Gurt"
version = "0.1.0"
edition = "2024"

[dependencies]
gurtlib = "0.1"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = "1.0"
serde_json = "1.0"
rustls = { version = "0.23", features = ["aws-lc-rs"] }
secp256k1 = { version = "0.31", features = ["hashes", "rand" ] }

nostr-sdk = "0.43"